k8s/applications/base/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-app-policy
spec:
  description: 'Default application network policy with namespace isolation'
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: applications
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: '9090'
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: '${NAMESPACE}'
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
            - port: '53'
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: '${NAMESPACE}'
